--- a/css/styles.css
+++ b/css/styles.css
@@ -94,8 +94,10 @@ body {
     color: #2e2f42;
 }
 .nav-link {
+    display: block;
     padding-top: 24px;
     padding-bottom: 24px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-link:hover, 
 .nav-link:focus {
@@ -113,6 +115,7 @@ body {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-link:hover,
 .address-link:focus {
@@ -122,9 +125,16 @@ body {
 /* ====== HERO SECTION STYLES ====== */
 
 .hero-section {
+    max-width: 1440px;
+    margin-left: auto;
+    margin-right: auto;
     padding-top: 188px;
     padding-bottom: 188px;
     background-color: #2e2f42;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/bg-photo/people-office.jpg);
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 .hero-container {
     display: flex;
@@ -151,6 +161,7 @@ body {
     border-radius: 4px;
     border: none;
     min-width: 169px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-button:focus,
 .hero-button:hover {
@@ -181,6 +192,17 @@ body {
 .benefits-item {
     width: calc((100% - 72px) / 4);
 }
+.benefits-icon {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+    border: 1px solid #8E8F99;
+    border-radius: 4px;
+    width: 264px;
+    height: 112px;
+    background-color: #f4f4fd;
+    margin-bottom: 8px;
+}
 .text {
     line-height: 1.5;
 }
@@ -201,6 +223,10 @@ body {
 }
 .team-card {
     padding: 32px 0;
+    margin-left: 16px;
+    margin-right: 16px;
+    border-radius: 0 0 4px 4px;
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 .team-sub-title {
     font-weight: 500;
@@ -211,8 +237,29 @@ body {
     margin-bottom: 8px;
     text-align: center;
 }
+.team-social-icon-list {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 8px;
+}
+.team-social-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    line-height: 0;
+    border-radius: 50%;
+    background-color: #4d5ae5;
+    fill: #ffffff;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.team-social-icon:hover {
+    background-color: #404bbf;
+}
 .team-text{
     text-align: center;
+    line-height: 1.5;
 }
 /* ====== OUR PORTFOLIO SETION STYLES ====== */
 .portfolio-section {
@@ -224,10 +271,44 @@ body {
     flex-wrap: wrap;
     gap: 48px 24px;
 }
+.portfolio-overlay {
+    position: relative;
+    overflow: hidden;
+}
+
 .portfolio-card {
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-card:hover,
+.portfolio-card:focus {
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+.portfolio-card-content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 360px;
+    height: 300px; 
+    background-color: #4d5ae5;
+    padding-top: 40px;
+    padding-left: 32px;
+    padding-right: 32px;
+    overflow-y: auto;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-item:hover .portfolio-card-content {
+    transform: translateY(0%);
+}
+.portfolio-content-text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
 }
 /* ====== FOOTER SECTION ====== */
 
@@ -235,6 +316,10 @@ body {
     background-color: #2e2f42;
     padding-top: 100px;
     padding-bottom: 100px;
+}
+.footer-container {
+    display: flex;
+    gap: 120px;
 }
 .logo-footer{
     display: inline-block;
@@ -255,4 +340,26 @@ body {
     line-height: 1.5;
     display: block;
     width: 264px;
+}
+.footer-social-list {
+    display: flex;
+    gap: 16px;
+    margin-top: 16px;
+}
+.footer-social-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+        width: 40px;
+        height: 40px;
+        line-height: 0;
+        border-radius: 50%;
+        background-color: #4d5ae5;
+        fill: #ffffff;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-social-link:hover,
+.footer-social-link:focus {
+    background-color: #31D0AA;
+
 }
