--- a/css/styles.css
+++ b/css/styles.css
@@ -92,9 +92,11 @@ body {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    position: relative;
 }
 .nav-link {
     display: block;
+    width: max-content;
     padding-top: 24px;
     padding-bottom: 24px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -102,6 +104,18 @@ body {
 .nav-link:hover, 
 .nav-link:focus {
     color: #404bbf;
+}
+.nav-item:hover::after {
+    content: '';
+    display: block;
+    position: absolute;
+    border-radius: 2px;
+    width: 100%;
+    height: 4px;
+    background-color: #404bbf;
+    margin-left: auto;
+    margin-right: auto;
+   
 }
 .address {
     font-style: normal;
