--- a/css/styles.css
+++ b/css/styles.css
@@ -69,13 +69,14 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);   
-}
+    
 .header {
     display: flex;
     flex-direction: column;
     align-items: center;
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+    }
 }
 .header-nav {
     display: flex;
@@ -257,6 +258,9 @@ body {
     margin-bottom: 8px;
     text-align: center;
 }
+.team-svg {
+    fill: #F4F4FD;
+}
 .team-social-icon-list {
     display: flex;
     justify-content: center;
@@ -375,6 +379,7 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .footer-social-text {
     color: #FFFFFF;
     font-weight: 500;
+    line-height: 1.5;
     margin-bottom: 16px;
 }
 .footer-social-list {
@@ -395,8 +400,10 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
         line-height: 0;
         border-radius: 50%;
         background-color: #4d5ae5;
-        fill: #ffffff;
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-svg {
+fill: #ffffff;
 }
 .footer-social-link:hover,
 .footer-social-link:focus {
