--- a/css/styles.css
+++ b/css/styles.css
@@ -318,29 +318,25 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .portfolio-item:focus {
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
-.portfolio-card-content {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 360px;
-    height: 300px; 
-    background-color: #4d5ae5;
-    padding-top: 40px;
-    padding-left: 32px;
-    padding-right: 32px;
-    overflow-y: auto;
-    transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.portfolio-item:hover .portfolio-card-content {
+
+.portfolio-item:hover .portfolio-content-text {
     transform: translateY(0%);
 }
 .portfolio-content-text {
-    font-weight: 400;
+    position: absolute;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #f4f4fd;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    padding: 40px 32px;
+    overflow-y: auto;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* ====== FOOTER SECTION ====== */
 
