--- a/css/styles.css
+++ b/css/styles.css
@@ -70,14 +70,15 @@ body {
     justify-content: space-between;
     align-items: center;
     
+}  
 .header {
     display: flex;
     flex-direction: column;
     align-items: center;
     border-bottom: 1px solid #e7e9fc;
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+   
     }
-}
 .header-nav {
     display: flex;
     align-items: center;
@@ -111,13 +112,15 @@ body {
 .nav-link:focus {
     color: #404bbf;
 }
-.nav-item:first-child::after {
+.nav-item::after {
     content: '';
     display: block;
     position: absolute;
     border-radius: 2px;
     width: 100%;
     height: 4px;
+    left: 0;
+    bottom: -1px;
     background-color: #404bbf;
     margin-left: auto;
     margin-right: auto;
