--- a/css/styles.css
+++ b/css/styles.css
@@ -112,7 +112,7 @@ body {
 .nav-link:focus {
     color: #404bbf;
 }
-.nav-item::after {
+.nav-link::after {
     content: '';
     display: block;
     position: absolute;
@@ -322,7 +322,7 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
-.portfolio-item:hover .portfolio-content-text {
+.portfolio-overlay:hover .portfolio-content-text {
     transform: translateY(0%);
 }
 .portfolio-content-text {
@@ -402,7 +402,7 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-svg {
-fill: #ffffff;
+fill: #f4f4f4;
 }
 .footer-social-link:hover,
 .footer-social-link:focus {
