--- a/css/styles.css
+++ b/css/styles.css
@@ -243,7 +243,7 @@ body {
 .team-item {
     background-color: #FFFFFF;
     border-radius: 0px 0px 4px 4px;
-    box-shadow  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .team-card {
     padding: 32px 0;
@@ -402,7 +402,7 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-svg {
-fill: #f4f4f4;
+fill: #f4f4fd;
 }
 .footer-social-link:hover,
 .footer-social-link:focus {
